codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_footer_override.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"   Side from main thread · Esc to return                                        "
